ai setup concluded

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				</button>
 			</form>
 
-			<h2 id="content">Summary</h2>
+			<h2 id="">Summary</h2>
 			<p id="content" class="placeholder">Choose a short to sum up.</p>
 		</div>
 		<script type="module" src="web/main.js"></script>
